[package]
name = "json-to-rss"
version = "0.1.0"
authors = ["lupyuen <luppy@appkaki.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.9.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
chrono = "0.4.11"
